pytestによる結果出力
No1～54までのスクリプト修正
テスト結果のレポート格納

--- a/WEKO3AutoTest/03/conf.ini
+++ b/WEKO3AutoTest/03/conf.ini
@@ -3,7 +3,7 @@ SETTIMEOUT = 50000
 SETWAIT = 5000
 
 ;Set NEW or 日付(ex 20220217-00002)
-SETWFDAY = 20220217-00002
+SETWFDAY = NEW
 
 ;Set ON or OFF
-ACTIVELOCK = ON
+ACTIVELOCK = OFF
